--- a/website/src/components/ui/link.astro
+++ b/website/src/components/ui/link.astro
@@ -1,6 +1,4 @@
 ---
-import { localizePath } from "astro-i18next";
-
 interface Props {
 	href: string;
 	size?: "xs" | "sm" | "md" | "lg";
@@ -28,17 +26,17 @@ const sizes = {
 
 const styles = {
 	outline:
-		"text-center border outline-2 transition-colors border-gray-300 text-gray-700 dark:text-gray-100 hover:border-gray-400 dark:text-white active:outline dark:hover:bg-dark dark:hover:border-white dark:hover:text-white",
+		"text-center border outline-2 transition-colors border-gray-300 text-gray-700 hover:border-gray-400 active:outline",
 	primary:
-		"text-center bg-blue-800 outline-2 dark:bg-blue-100 hover:bg-blue-800 dark:hover:bg-white focus-visible:bg-blue-500 dark:focus-visible:bg-blue-100 text-white dark:text-black border-transparent active:outline shadow-sm",
-	muted: "text-sm leading-6 text-gray-800 dark:text-gray-100",
+		"text-center bg-primary outline-2 hover:bg-blue-900 focus-visible:bg-blue-500 text-white border-transparent active:outline shadow-sm",
+	muted: "text-sm leading-6 text-gray-800",
 	hover:
-		"text-center text-stone-950 hover:text-gray-900 focus:text-gray-900 focus:bg-blue-200 focus:outline-none focus:shadow-outline hover:bg-blue-200 dark:hover:bg-blue-600 dark:focus:bg-blue-600 dark:focus:text-white dark:hover:text-white dark:text-gray-200",
+		"text-center text-stone-950 hover:text-gray-900 focus:text-gray-900 focus:bg-blue-200 focus:outline-none focus:shadow-outline hover:bg-blue-200",
 };
 ---
 
 <a
-	href={href.startsWith("http") ? href : localizePath(href)}
+	href={href}
 	{...rest}
 	class:list={[
 		"rounded-md text-sm transition focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2",
