--- a/website/src/components/navbar/navbar.astro
+++ b/website/src/components/navbar/navbar.astro
@@ -12,7 +12,7 @@ import logo from "assets/logo.svg";
   <div class="p-4 flex flex-row items-center justify-between">
     <a
       href="/"
-      class="flex gap-3 items-center text-lg font-semibold tracking-widest text-gray-900 uppercase rounded-lg dark:text-white focus:outline-none focus:shadow-outline"
+      class="flex gap-3 items-center text-lg font-semibold tracking-widest text-gray-900 uppercase rounded-lg focus:outline-none focus:shadow-outline"
     >
       <Image src={logo} alt="logo" width={160}  />
     </a>
