--- a/website/src/components/hero.astro
+++ b/website/src/components/hero.astro
@@ -2,7 +2,7 @@
 import Link from "@components/ui/link.astro";
 ---
 
-<div class="relative isolate pt-14 dark:bg-stone-950">
+<div class="relative isolate pt-14">
   <div
     class="absolute inset-x-0 -top-40 -z-10 transform-gpu overflow-hidden blur-3xl sm:-top-80"
   >
@@ -35,12 +35,12 @@ import Link from "@components/ui/link.astro";
     <div class="mx-auto max-w-7xl">
       <div class="mx-auto max-w-2xl text-center">
         <h1
-          class="text-4xl font-medium tracking-tight text-black dark:text-white sm:text-6xl"
+          class="text-4xl font-medium tracking-tight text-black"
           style="font-family: Young Serif;"
         >
           AI SRE Copilot for the Cloud
         </h1>
-        <p class="mt-6 text-lg leading-8 text-gray-900 dark:text-gray-100">
+        <p class="mt-6 text-lg leading-8 text-gray-900">
           Supercharge your software team with InfraGPT. Automate tedious SRE
           tasks, optimize cloud costs, and solve infrastructure issues in real
           time—right from Slack.
