--- a/website/src/components/navbar/navbar.astro
+++ b/website/src/components/navbar/navbar.astro
@@ -1,7 +1,7 @@
 ---
 import Button from "@components/ui/button.astro";
 import Link from "@components/ui/link.astro";
-import Image from "astro/components/Image.astro";
+import { Image } from "astro:assets";
 import logo from "assets/logo.svg";
 ---
 
