fix website linting errors

--- a/services/website/src/components/features.astro
+++ b/services/website/src/components/features.astro
@@ -1,7 +1,6 @@
 ---
-import Link from "@components/ui/link.astro";
 import { Icon } from "astro-icon/components";
-// @ts-ignore
+// @ts-expect-error: Icon component from astro-icon requires additional configuration
 
 const features = [
   {
