--- a/services/website/src/components/vision.astro
+++ b/services/website/src/components/vision.astro
@@ -169,7 +169,7 @@ import Sectionhead from "@components/sectionhead.astro";
 
       <p class="text-lg">
         I've been managing infrastructure for a decade both as a developer and
-        as a infrastructure engineer. I've maintained >99% uptime for
+        as a infrastructure engineer. I've maintained &gt;99% uptime for
         large-scale systems and reduced production costs. At OkCredit I reduced
         cost of serving 2 million MAUs from ₹400,000 to ₹50,000 per day. Through
         this journey, I've seen firsthand how hard it is to manage
