--- a/services/website/src/pages/404.astro
+++ b/services/website/src/pages/404.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "@layouts/Layout.astro";
 
-const title = "Error 404";
+const _title = "Error 404";
 ---
 
 <Layout title="404">
