--- a/services/website/src/components/vision.astro
+++ b/services/website/src/components/vision.astro
@@ -305,7 +305,7 @@ import Sectionhead from "@components/sectionhead.astro";
           Read Blog Post
         </a>
         <a
-          href="https://github.com/priyanshujain/infragpt"
+          href="https://github.com/73ai/infragpt"
           target="_blank"
           class="inline-flex items-center gap-2 px-6 py-3 border border-gray-300 text-gray-900 font-medium rounded-lg hover:bg-gray-50 transition-colors"
         >
